// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON Test Suite Spec y_array_arraysWithSpaces.json: y_array_arraysWithSpaces.json 1`] = `
Array [
  Array [],
]
`;

exports[`JSON Test Suite Spec y_array_empty.json: y_array_empty.json 1`] = `Array []`;

exports[`JSON Test Suite Spec y_array_empty-string.json: y_array_empty-string.json 1`] = `
Array [
  "\\"\\"",
]
`;

exports[`JSON Test Suite Spec y_array_ending_with_newline.json: y_array_ending_with_newline.json 1`] = `
Array [
  "a",
]
`;

exports[`JSON Test Suite Spec y_array_false.json: y_array_false.json 1`] = `
Array [
  false,
]
`;

exports[`JSON Test Suite Spec y_array_heterogeneous.json: y_array_heterogeneous.json 1`] = `
Array [
  null,
  1,
  "1",
  Object {},
]
`;

exports[`JSON Test Suite Spec y_array_null.json: y_array_null.json 1`] = `
Array [
  null,
]
`;

exports[`JSON Test Suite Spec y_array_with_1_and_newline.json: y_array_with_1_and_newline.json 1`] = `
Array [
  1,
]
`;

exports[`JSON Test Suite Spec y_array_with_leading_space.json: y_array_with_leading_space.json 1`] = `
Array [
  1,
]
`;

exports[`JSON Test Suite Spec y_array_with_several_null.json: y_array_with_several_null.json 1`] = `
Array [
  1,
  null,
  null,
  null,
  2,
]
`;

exports[`JSON Test Suite Spec y_array_with_trailing_space.json: y_array_with_trailing_space.json 1`] = `
Array [
  2,
]
`;

exports[`JSON Test Suite Spec y_number.json: y_number.json 1`] = `
Array [
  1.23e+67,
]
`;

exports[`JSON Test Suite Spec y_number_0e+1.json: y_number_0e+1.json 1`] = `
Array [
  0,
]
`;

exports[`JSON Test Suite Spec y_number_0e1.json: y_number_0e1.json 1`] = `
Array [
  0,
]
`;

exports[`JSON Test Suite Spec y_number_after_space.json: y_number_after_space.json 1`] = `
Array [
  4,
]
`;

exports[`JSON Test Suite Spec y_number_double_close_to_zero.json: y_number_double_close_to_zero.json 1`] = `
Array [
  -1e-78,
]
`;

exports[`JSON Test Suite Spec y_number_int_with_exp.json: y_number_int_with_exp.json 1`] = `
Array [
  200,
]
`;

exports[`JSON Test Suite Spec y_number_minus_zero.json: y_number_minus_zero.json 1`] = `
Array [
  -0,
]
`;

exports[`JSON Test Suite Spec y_number_negative_int.json: y_number_negative_int.json 1`] = `
Array [
  -123,
]
`;

exports[`JSON Test Suite Spec y_number_negative_one.json: y_number_negative_one.json 1`] = `
Array [
  -1,
]
`;

exports[`JSON Test Suite Spec y_number_negative_zero.json: y_number_negative_zero.json 1`] = `
Array [
  -0,
]
`;

exports[`JSON Test Suite Spec y_number_real_capital_e.json: y_number_real_capital_e.json 1`] = `
Array [
  1e+22,
]
`;

exports[`JSON Test Suite Spec y_number_real_capital_e_neg_exp.json: y_number_real_capital_e_neg_exp.json 1`] = `
Array [
  0.01,
]
`;

exports[`JSON Test Suite Spec y_number_real_capital_e_pos_exp.json: y_number_real_capital_e_pos_exp.json 1`] = `
Array [
  100,
]
`;

exports[`JSON Test Suite Spec y_number_real_exponent.json: y_number_real_exponent.json 1`] = `
Array [
  1.23e+47,
]
`;

exports[`JSON Test Suite Spec y_number_real_fraction_exponent.json: y_number_real_fraction_exponent.json 1`] = `
Array [
  1.23456e+80,
]
`;

exports[`JSON Test Suite Spec y_number_real_neg_exp.json: y_number_real_neg_exp.json 1`] = `
Array [
  0.01,
]
`;

exports[`JSON Test Suite Spec y_number_real_pos_exponent.json: y_number_real_pos_exponent.json 1`] = `
Array [
  100,
]
`;

exports[`JSON Test Suite Spec y_number_simple_int.json: y_number_simple_int.json 1`] = `
Array [
  123,
]
`;

exports[`JSON Test Suite Spec y_number_simple_real.json: y_number_simple_real.json 1`] = `
Array [
  123.456789,
]
`;

exports[`JSON Test Suite Spec y_object.json: y_object.json 1`] = `
Object {
  "asd": "sdf",
  "dfg": "fgh",
}
`;

exports[`JSON Test Suite Spec y_object_basic.json: y_object_basic.json 1`] = `
Object {
  "asd": "sdf",
}
`;

exports[`JSON Test Suite Spec y_object_duplicated_key.json: y_object_duplicated_key.json 1`] = `
Object {
  "a": "c",
}
`;

exports[`JSON Test Suite Spec y_object_duplicated_key_and_value.json: y_object_duplicated_key_and_value.json 1`] = `
Object {
  "a": "b",
}
`;

exports[`JSON Test Suite Spec y_object_empty.json: y_object_empty.json 1`] = `Object {}`;

exports[`JSON Test Suite Spec y_object_empty_key.json: y_object_empty_key.json 1`] = `
Object {
  "\\"\\"": 0,
}
`;

exports[`JSON Test Suite Spec y_object_escaped_null_in_key.json: y_object_escaped_null_in_key.json 1`] = `
Object {
  "foo\\\\u0000bar": 42,
}
`;

exports[`JSON Test Suite Spec y_object_extreme_numbers.json: y_object_extreme_numbers.json 1`] = `
Object {
  "max": 1e+28,
  "min": -1e+28,
}
`;

exports[`JSON Test Suite Spec y_object_long_strings.json: y_object_long_strings.json 1`] = `
Object {
  "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
  "x": Array [
    Object {
      "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
    },
  ],
}
`;

exports[`JSON Test Suite Spec y_object_simple.json: y_object_simple.json 1`] = `
Object {
  "a": Array [],
}
`;

exports[`JSON Test Suite Spec y_object_string_unicode.json: y_object_string_unicode.json 1`] = `
Object {
  "title": "\\\\u041f\\\\u043e\\\\u043b\\\\u0442\\\\u043e\\\\u0440\\\\u0430 \\\\u0417\\\\u0435\\\\u043c\\\\u043b\\\\u0435\\\\u043a\\\\u043e\\\\u043f\\\\u0430",
}
`;

exports[`JSON Test Suite Spec y_object_with_newlines.json: y_object_with_newlines.json 1`] = `
Object {
  "a": "b",
}
`;

exports[`JSON Test Suite Spec y_string_1_2_3_bytes_UTF-8_sequences.json: y_string_1_2_3_bytes_UTF-8_sequences.json 1`] = `
Array [
  "\\\\u0060\\\\u012a\\\\u12AB",
]
`;

exports[`JSON Test Suite Spec y_string_accepted_surrogate_pair.json: y_string_accepted_surrogate_pair.json 1`] = `
Array [
  "\\\\uD801\\\\udc37",
]
`;

exports[`JSON Test Suite Spec y_string_accepted_surrogate_pairs.json: y_string_accepted_surrogate_pairs.json 1`] = `
Array [
  "\\\\ud83d\\\\ude39\\\\ud83d\\\\udc8d",
]
`;

exports[`JSON Test Suite Spec y_string_allowed_escapes.json: y_string_allowed_escapes.json 1`] = `
Array [
  "\\\\\\"\\\\\\\\\\\\/\\\\b\\\\f\\\\n\\\\r\\\\t",
]
`;

exports[`JSON Test Suite Spec y_string_backslash_and_u_escaped_zero.json: y_string_backslash_and_u_escaped_zero.json 1`] = `
Array [
  "\\\\\\\\u0000",
]
`;

exports[`JSON Test Suite Spec y_string_backslash_doublequotes.json: y_string_backslash_doublequotes.json 1`] = `
Array [
  "\\\\\\"",
]
`;

exports[`JSON Test Suite Spec y_string_comments.json: y_string_comments.json 1`] = `
Array [
  "a/*b*/c/*d//e",
]
`;

exports[`JSON Test Suite Spec y_string_double_escape_a.json: y_string_double_escape_a.json 1`] = `
Array [
  "\\\\\\\\a",
]
`;

exports[`JSON Test Suite Spec y_string_double_escape_n.json: y_string_double_escape_n.json 1`] = `
Array [
  "\\\\\\\\n",
]
`;

exports[`JSON Test Suite Spec y_string_escaped_control_character.json: y_string_escaped_control_character.json 1`] = `
Array [
  "\\\\u0012",
]
`;

exports[`JSON Test Suite Spec y_string_escaped_noncharacter.json: y_string_escaped_noncharacter.json 1`] = `
Array [
  "\\\\uFFFF",
]
`;

exports[`JSON Test Suite Spec y_string_in_array.json: y_string_in_array.json 1`] = `
Array [
  "asd",
]
`;

exports[`JSON Test Suite Spec y_string_in_array_with_leading_space.json: y_string_in_array_with_leading_space.json 1`] = `
Array [
  "asd",
]
`;

exports[`JSON Test Suite Spec y_string_last_surrogates_1_and_2.json: y_string_last_surrogates_1_and_2.json 1`] = `
Array [
  "\\\\uDBFF\\\\uDFFF",
]
`;

exports[`JSON Test Suite Spec y_string_nbsp_uescaped.json: y_string_nbsp_uescaped.json 1`] = `
Array [
  "new\\\\u00A0line",
]
`;

exports[`JSON Test Suite Spec y_string_nonCharacterInUTF-8_U+10FFFF.json: y_string_nonCharacterInUTF-8_U+10FFFF.json 1`] = `
Array [
  "􏿿",
]
`;

exports[`JSON Test Suite Spec y_string_nonCharacterInUTF-8_U+FFFF.json: y_string_nonCharacterInUTF-8_U+FFFF.json 1`] = `
Array [
  "￿",
]
`;

exports[`JSON Test Suite Spec y_string_null_escape.json: y_string_null_escape.json 1`] = `
Array [
  "\\\\u0000",
]
`;

exports[`JSON Test Suite Spec y_string_one-byte-utf-8.json: y_string_one-byte-utf-8.json 1`] = `
Array [
  "\\\\u002c",
]
`;

exports[`JSON Test Suite Spec y_string_pi.json: y_string_pi.json 1`] = `
Array [
  "π",
]
`;

exports[`JSON Test Suite Spec y_string_reservedCharacterInUTF-8_U+1BFFF.json: y_string_reservedCharacterInUTF-8_U+1BFFF.json 1`] = `
Array [
  "𛿿",
]
`;

exports[`JSON Test Suite Spec y_string_simple_ascii.json: y_string_simple_ascii.json 1`] = `
Array [
  "asd ",
]
`;

exports[`JSON Test Suite Spec y_string_space.json: y_string_space.json 1`] = `" "`;

exports[`JSON Test Suite Spec y_string_surrogates_U+1D11E_MUSICAL_SYMBOL_G_CLEF.json: y_string_surrogates_U+1D11E_MUSICAL_SYMBOL_G_CLEF.json 1`] = `
Array [
  "\\\\uD834\\\\uDd1e",
]
`;

exports[`JSON Test Suite Spec y_string_three-byte-utf-8.json: y_string_three-byte-utf-8.json 1`] = `
Array [
  "\\\\u0821",
]
`;

exports[`JSON Test Suite Spec y_string_two-byte-utf-8.json: y_string_two-byte-utf-8.json 1`] = `
Array [
  "\\\\u0123",
]
`;

exports[`JSON Test Suite Spec y_string_u+2028_line_sep.json: y_string_u+2028_line_sep.json 1`] = `
Array [
  " ",
]
`;

exports[`JSON Test Suite Spec y_string_u+2029_par_sep.json: y_string_u+2029_par_sep.json 1`] = `
Array [
  " ",
]
`;

exports[`JSON Test Suite Spec y_string_uEscape.json: y_string_uEscape.json 1`] = `
Array [
  "\\\\u0061\\\\u30af\\\\u30EA\\\\u30b9",
]
`;

exports[`JSON Test Suite Spec y_string_uescaped_newline.json: y_string_uescaped_newline.json 1`] = `
Array [
  "new\\\\u000Aline",
]
`;

exports[`JSON Test Suite Spec y_string_unescaped_char_delete.json: y_string_unescaped_char_delete.json 1`] = `
Array [
  "",
]
`;

exports[`JSON Test Suite Spec y_string_unicode.json: y_string_unicode.json 1`] = `
Array [
  "\\\\uA66D",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_2.json: y_string_unicode_2.json 1`] = `
Array [
  "⍂㈴⍂",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_U+1FFFE_nonchar.json: y_string_unicode_U+1FFFE_nonchar.json 1`] = `
Array [
  "\\\\uD83F\\\\uDFFE",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_U+10FFFE_nonchar.json: y_string_unicode_U+10FFFE_nonchar.json 1`] = `
Array [
  "\\\\uDBFF\\\\uDFFE",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_U+200B_ZERO_WIDTH_SPACE.json: y_string_unicode_U+200B_ZERO_WIDTH_SPACE.json 1`] = `
Array [
  "\\\\u200B",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_U+2064_invisible_plus.json: y_string_unicode_U+2064_invisible_plus.json 1`] = `
Array [
  "\\\\u2064",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_U+FDD0_nonchar.json: y_string_unicode_U+FDD0_nonchar.json 1`] = `
Array [
  "\\\\uFDD0",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_U+FFFE_nonchar.json: y_string_unicode_U+FFFE_nonchar.json 1`] = `
Array [
  "\\\\uFFFE",
]
`;

exports[`JSON Test Suite Spec y_string_unicode_escaped_double_quote.json: y_string_unicode_escaped_double_quote.json 1`] = `
Array [
  "\\\\u0022",
]
`;

exports[`JSON Test Suite Spec y_string_unicodeEscapedBackslash.json: y_string_unicodeEscapedBackslash.json 1`] = `
Array [
  "\\\\u005C",
]
`;

exports[`JSON Test Suite Spec y_string_utf8.json: y_string_utf8.json 1`] = `
Array [
  "€𝄞",
]
`;

exports[`JSON Test Suite Spec y_string_with_del_character.json: y_string_with_del_character.json 1`] = `
Array [
  "aa",
]
`;

exports[`JSON Test Suite Spec y_structure_lonely_false.json: y_structure_lonely_false.json 1`] = `false`;

exports[`JSON Test Suite Spec y_structure_lonely_int.json: y_structure_lonely_int.json 1`] = `42`;

exports[`JSON Test Suite Spec y_structure_lonely_negative_real.json: y_structure_lonely_negative_real.json 1`] = `-0.1`;

exports[`JSON Test Suite Spec y_structure_lonely_null.json: y_structure_lonely_null.json 1`] = `null`;

exports[`JSON Test Suite Spec y_structure_lonely_string.json: y_structure_lonely_string.json 1`] = `"asd"`;

exports[`JSON Test Suite Spec y_structure_lonely_true.json: y_structure_lonely_true.json 1`] = `true`;

exports[`JSON Test Suite Spec y_structure_string_empty.json: y_structure_string_empty.json 1`] = `"\\"\\""`;

exports[`JSON Test Suite Spec y_structure_trailing_newline.json: y_structure_trailing_newline.json 1`] = `
Array [
  "a",
]
`;

exports[`JSON Test Suite Spec y_structure_true_in_array.json: y_structure_true_in_array.json 1`] = `
Array [
  true,
]
`;

exports[`JSON Test Suite Spec y_structure_whitespace_array.json: y_structure_whitespace_array.json 1`] = `Array []`;
